@@ -194,6 +194,10 @@ CONFIG_NET_PRIORITY=0
 #
 
 #
+# External Memory Configuration
+#
+
+#
 # Architecture Options
 #
 # CONFIG_ARCH_NOINTC is not set
@@ -396,6 +400,10 @@ CONFIG_NET_NACTIVESOCKETS=16
 CONFIG_NET_SOCKOPTS=y
 CONFIG_NET_BUFSIZE=562
 # CONFIG_NET_TCPURGDATA is not set
+
+#
+# TCP/IP Networking
+#
 CONFIG_NET_TCP=y
 CONFIG_NET_TCP_CONNS=8
 CONFIG_NET_MAX_LISTENPORTS=8
@@ -403,6 +411,12 @@ CONFIG_NET_TCP_READAHEAD_BUFSIZE=562
 CONFIG_NET_NTCP_READAHEAD_BUFFERS=16
 CONFIG_NET_TCP_RECVDELAY=0
 # CONFIG_NET_TCPBACKLOG is not set
+CONFIG_NET_TCP_SPLIT=y
+CONFIG_NET_TCP_SPLIT_SIZE=40
+
+#
+# UDP Networking
+#
 CONFIG_NET_UDP=y
 CONFIG_NET_UDP_CHECKSUMS=y
 CONFIG_NET_UDP_CONNS=8
